add api getExamsSpecificStudent